--- a/src/views/payment/payment.css
+++ b/src/views/payment/payment.css
@@ -1,214 +1,256 @@
+.marginbox > h1 {
+	font-size: 20px;
+	font-weight: 700;
+	display: inline-block;
+	width: 100%;
+	text-align: center;
+	margin: 1.5rem 0 0;
+}
+.container > h3,
+.header > p {
+	font-size: 18px;
+	font-weight: 700;
+	padding: 2rem 0 1rem;
+	margin: 0;
+	border-bottom: 1px solid #141414;
+}
+.adressfind-btn {
+	cursor: pointer;
+}
+.form-container {
+	padding: 1rem 0 0;
+}
+.field {
+	display: flex;
+	padding: 0 0 1rem;
+	align-items: center;
+}
+.label {
+	font-size: 14px;
+	font-weight: 700;
+	width: 10%;
+}
+input {
+	border: 1px solid #e5e5e5;
+	padding: 0 1rem;
+	height: 2.3rem;
+	line-height: 2.3rem;
+}
+.input-gray {
+	background-color: #eee;
+}
+input:focus {
+	outline: none !important;
+	border: 1px solid #141414;
+	background-color: #fff;
+}
+.input-gray:focus {
+	outline: none !important;
+	border: 1px solid #e5e5e5;
+	background-color: #eee;
+}
+input:-webkit-autofill,
+.input-gray:-webkit-autofill {
+	-webkit-box-shadow: 0 0 0 1000px #fff inset;
+}
+
 .account-header {
-    border-bottom: 1px solid;
-    display: block;
-    padding-bottom: .7rem;
+	border-bottom: 1px solid;
+	display: block;
+	padding-bottom: 0.7rem;
 }
 
 .orderTable {
-    display: table;
-    width: 100%;
+	display: table;
+	width: 100%;
 }
 
 .orderTableRowGroup {
-    display: table-row-group;
+	display: table-row-group;
 }
 
 .orderTableTitle {
-    display: table-row;
-    font-weight: bold;
-    background-color: #9acbdb;
+	display: table-row;
+	font-weight: bold;
+	background-color: #9acbdb;
 }
 
 .orderTableRow {
-    display: table-row;
+	display: table-row;
 }
 
 .orderTableCell {
-    display: table-cell;
-    text-align: center;
-    vertical-align: middle;
+	display: table-cell;
+	text-align: center;
+	vertical-align: middle;
 }
 
 #addressInput {
-    width: 400px;
+	width: 400px;
 }
 
 /* 아래는 데모사이트 참고용으로 복붙. 이후 삭제 */
 .header-search-input {
-    width: 20rem
+	width: 20rem;
 }
 
 .navbar-menu .is-info:focus {
-    box-shadow: none;
-    outline: none
+	box-shadow: none;
+	outline: none;
 }
 
 .cart-header {
-    border-bottom: 1px solid #dbdbdb;
-    display: flex;
-    margin-bottom: 2rem;
-    padding-bottom: .5rem
+	border-bottom: 1px solid #dbdbdb;
+	display: flex;
+	margin-bottom: 2rem;
+	padding-bottom: 0.5rem;
 }
 
 .cart-header.title {
-    margin-bottom: 0;
-    padding-top: 2rem
+	margin-bottom: 0;
+	padding-top: 2rem;
 }
 
 .cart-header.subtitle {
-    line-height: 1.7;
-    margin-bottom: 0;
-    margin-top: 0;
-    padding: 2rem 1rem 0
+	line-height: 1.7;
+	margin-bottom: 0;
+	margin-top: 0;
+	padding: 2rem 1rem 0;
 }
 
 .subtitle-cart {
-    cursor: pointer
+	cursor: pointer;
 }
 
-.title:not(.is-spaced)+.subtitle {
-    margin-top: 0
+.title:not(.is-spaced) + .subtitle {
+	margin-top: 0;
 }
 
 .cart-products {
-    flex: none;
-    height: 100%;
-    width: 60%
+	flex: none;
+	height: 100%;
+	width: 60%;
 }
 
 .delivery-info {
-    width: 100%
+	width: 100%;
 }
 
 .delivery-info .subtitle {
-    padding-left: .4rem
+	padding-left: 0.4rem;
 }
 
 .delivery-info .field-label {
-    flex-basis: 7rem;
-    flex-grow: 0;
-    height: 3rem;
-    line-height: 2rem;
-    text-align: left
-}
-
-.delivery-info .field-body,
-.delivery-info .select {
-    flex-basis: 35rem;
-    flex-grow: 0;
-    height: 3rem
+	font-size: 14px;
+	font-weight: 700;
+	width: 10%;
 }
 
 .select select {
-    color: rgba(0, 0, 0, .8);
-    height: 100%;
+	color: rgba(0, 0, 0, 0.8);
+	height: 2.2rem;
+	width: 13rem;
 }
 
 .select .select-option {
-    color: #000;
-    font-size: 1.1rem
+	color: #000;
+	font-size: 1.1rem;
 }
 
 .delivery-info .button {
-    height: 3rem
+	height: 3rem;
 }
 
 .delivery-info .field-body .control,
 .delivery-info .field-body .input {
-    height: 100%;
+	height: 100%;
 }
 
 .delivery-info .custom-request {
-    display: none
+	display: none;
 }
 
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none
-}
-
-.tile-order-summary {
-    height: 100%;
-    position: sticky;
-    top: .5rem
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
 }
 
 .order-summary {
-    background-color: #f0f5f7;
-    width: 100%
+	width: 100%;
 }
 
 .order-summary .header {
-    font-size: 1.4rem
+	font-size: 1.4rem;
 }
 
-.order-info,
-.order-summary .header {
-    border-bottom: 1px solid #555
+.order-info {
+	border-bottom: 1px solid #e5e5e5;
 }
 
 .order-info .info {
-    display: flex;
-    font-size: 1.1rem;
-    justify-content: space-between;
-    margin-top: .8rem
-}
-
-.order-info .info:first-child {
-    margin-top: 1.2rem
-}
-
-.order-info .info:last-child {
-    margin-bottom: 1.2rem
+	display: flex;
+	font-size: 16px;
+	justify-content: space-between;
 }
 
 .order-info .info p {
-    display: block;
-    max-width: 70%
+	display: block;
+	max-width: 70%;
 }
 
 .order-info .products-title {
-    text-align: right
+	text-align: right;
 }
 
 .total {
-    display: flex;
-    justify-content: space-between;
-    margin-top: .8rem
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
 .total P {
-    display: block
+	display: block;
 }
 
 .total .total-label {
-    font-size: 1.2rem;
-    font-weight: 700;
-    margin-top: .5rem
+	font-size: 1.2rem;
+	font-weight: 700;
+	margin-top: 0.5rem;
 }
 
 .total .total-price {
-    font-size: 2rem;
-    font-weight: 700
+	font-size: 2rem;
+	font-weight: 700;
 }
 
 .purchase {
-    margin-top: 3rem;
-    padding: .2rem 0
+	margin: 1rem 0 5rem;
+	text-align: center;
 }
 
-.purchase button {
-    font-size: 1.4rem;
-    font-weight: 800;
-    height: 4rem;
-    width: 100%
+.button {
+	max-width: 20rem;
+	border: 1px solid #141414;
+	padding: 0 5rem;
+	text-transform: capitalize;
+	text-align: center;
+	display: inline-block;
+	font-size: 18px;
+	transition: 0.3s;
+	height: 3rem;
+	line-height: 2.3rem;
+	cursor: pointer;
+	background-color: #141414;
+	color: #fff;
+	box-sizing: border-box;
+	white-space: nowrap;
+	font-weight: 700;
 }
-
-
-.cart-product-box {
-    border-top: 2px solid #000;
+.button:hover {
+	color: #141414;
+	background-color: #fff;
 }
 
 .tit-box {
@@ -250,11 +292,10 @@ input[type='checkbox'] {
 .cart-item .btn-quanity-box .input_num {
 	display: flex;
 	align-items: center;
-	border-bottom: 1px solid #e2e3e6;
-	border-top: 1px solid #e2e3e6;
 	border-left: none;
 	border-right: none;
 	clear: both;
+	font-size: 16px;
 }
 
 .cart-item {
@@ -271,7 +312,6 @@ input[type='checkbox'] {
 	display: flex;
 	align-items: center;
 	justify-content: flex-start;
-	border-left: 1px solid #e2e3e6;
 }
 .item-option {
 	display: flex;
@@ -285,7 +325,6 @@ input[type='checkbox'] {
 	justify-content: center;
 	width: 23%;
 	height: 144px;
-	border-left: 1px solid #e2e3e6;
 	background: #fff;
 	padding: 0;
 	margin-bottom: 0;
@@ -295,7 +334,6 @@ input[type='checkbox'] {
 	align-items: center;
 	justify-content: center;
 	height: 144px;
-	border-left: 1px solid #e2e3e6;
 	width: 21%;
 }
 
@@ -314,11 +352,10 @@ input[type='checkbox'] {
 	height: 100px;
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
-	align-items: flex-start;
+	justify-content: center;
 	margin-left: 30px;
 	overflow: hidden;
-	font-size: 18px;
+	font-size: 16px;
 }
 
 .product_name {
@@ -333,10 +370,8 @@ input[type='checkbox'] {
 	overflow: hidden;
 }
 .product_price {
-	font-weight: 700;
-	margin: 0;
+	display: none;
 }
-
 
 .btn-quanity-box {
 	width: 100%;
@@ -347,27 +382,11 @@ input[type='checkbox'] {
 }
 
 .btn-quanity-box .num_minus_btn {
-	font-size: 20px;
-	cursor: pointer;
-	width: 30px;
-	height: 30px;
-	padding: 2px;
-	text-align: center;
-	line-height: 20px;
-	background-color: #fff;
-	border: 1px solid #e2e3e6;
+	display: none;
 }
 
 .btn-quanity-box .num_plus_btn {
-	cursor: pointer;
-	font-size: 20px;
-	width: 30px;
-	height: 30px;
-	text-align: center;
-	line-height: 22px;
-	background-color: #fff;
-	border: 1px solid #e2e3e6;
-	padding: 2px;
+	display: none;
 }
 
 .btn-quanity-box .input_num {
@@ -383,70 +402,69 @@ input[type='checkbox'] {
 }
 
 .btn-item-buy-box {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
 
-
 .item-price {
-    font-size: 18px;
-    margin-bottom: 10px;
-    font-weight: 700;
+	font-size: 18px;
+	margin-bottom: 10px;
+	font-weight: 700;
 }
 
 .tit-box p {
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 56px;
-    text-align: center;
-    margin: 0;
+	font-size: 16px;
+	font-weight: 700;
+	line-height: 56px;
+	text-align: center;
+	margin: 0;
 }
 
 .btn-item-buy {
-    width: 92px;
-    height: 32px;
-    font-size: 13px;
-    line-height: 32px;
-    color: #fff;
-    border: 0;
-    background-color: #000;
-    padding: 0;
+	width: 92px;
+	height: 32px;
+	font-size: 13px;
+	line-height: 32px;
+	color: #fff;
+	border: 0;
+	background-color: #000;
+	padding: 0;
 }
 
 .payment-price-info {
-    margin: 50px 0;
+	margin: 50px 0;
 }
 
 .payment-price-info-box {
-    width: 100%;
-    padding: 26px 0;
-    border-top: 1px solid #888;
-    border-bottom: 1px solid #888;
-    display: flex;
-    text-align: center;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+	width: 100%;
+	padding: 26px 0;
+	border-top: 1px solid #888;
+	border-bottom: 1px solid #888;
+	display: flex;
+	text-align: center;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .payment-price-info-box strong {
-    margin-bottom: 2px;
-    font-size: 20px;
-    font-weight: 700;
+	margin-bottom: 2px;
+	font-size: 20px;
+	font-weight: 700;
 }
 
 .payment-price-info-box p {
-    color: #d3a164;
-    font-size: 24px;
-    font-weight: 700;
+	color: #d3a164;
+	font-size: 24px;
+	font-weight: 700;
 }
 
 .hide {
-    display: none;
+	display: none;
 }
 
 .inputTextnButton {
-    display: inline-block;
+	display: inline-block;
 }
