--- a/src/views/payment/payment.html
+++ b/src/views/payment/payment.html
@@ -116,14 +116,9 @@
 			<div class="container">
 				<h3 class="title">주문상품</h3>
 				<div class="cart-product-box">
-					<div class="tit-box">
-						<p class="product-info-cell">상품정보</p>
-						<p class="product-option-cell">옵션</p>
-						<p class="product-price-cell">상품금액</p>
-					</div>
 				</div>
-				<div>
-					<h3 class="title">받는이 정보</h3>
+				<div class="container">
+					<h3 class="title">주문자 정보</h3>
 				</div>
 				<div class="box delivery-info">
 					<div class="form-container">
@@ -135,22 +130,25 @@
 								</div>
 							</div>
 							<div class="field is-horizontal">
-								<div class="field">
-									<label class="label">주소</label>
+								<label class="label">주소</label>
+								<div class="adress-container">
+									<div>
+										<input type="text" id="postcodeInput" placeholder="우편번호" class="input-gray" readonly/>
+										<input type="text" id="addressInput" placeholder="주소" class="input-gray" readonly/>
+										<input
+											type="button"
+											onclick="sample6_execDaumPostcode()"
+											value="우편번호 찾기"
+											class="adressfind-btn"
+										/>
+									</div>
+									<input
+										type="text"
+										id="detailAddressInput"
+										placeholder="상세주소"
+									/>
 								</div>
 							</div>
-							<input type="text" id="postcodeInput" placeholder="우편번호" />
-							<input
-								type="button"
-								onclick="sample6_execDaumPostcode()"
-								value="우편번호 찾기"
-							/><br />
-							<input type="text" id="addressInput" placeholder="주소" /><br />
-							<input
-								type="text"
-								id="detailAddressInput"
-								placeholder="상세주소"
-							/>
 							<div class="field is-horizontal">
 								<label class="label">전화번호</label>
 								<div class="control">
@@ -175,7 +173,7 @@
 										<div class="inputTextnButton">
 											<div>
 												<input type="text" id="writeOption" />
-												<button id="writeOptionSaveButton">저장</button>
+												<button id="writeOptionSaveButton" class="btn btn--gray">저장</button>
 											</div>
 										</div>
 									</div>
